[package]
name = "hls_parse"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/lubezhang/hls_prase/"
repository = "https://github.com/lubezhang/hls_praset/"
authors = ["lubezhang <lubezhang@gmail.com>"]
keywords = ["hls", "m3u8"]
license = "MIT"
description="hls_parse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hls_parse"
path = "src/lib.rs"

[dependencies]
regex = "1.5.5"
url = "2.2.2"
# itertools = "0.10.3"
# stringreader = "0.1.1"