[package]
name = "hls_parse"
version = "0.1.3"
edition = "2021"
homepage = "https://github.com/lubezhang/hls_parse/"
repository = "https://github.com/lubezhang/hls_parse/"
authors = ["lubezhang <lubezhang@gmail.com>"]
keywords = ["hls", "m3u8"]
license = "MIT"
description="A library for parsing m3u8 files (Apple's HTTP Live Streaming (HLS) protocol)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hls_parse"
path = "src/lib.rs"

[dependencies]
regex = "1.5.5"
url = "2.2.2"
rust-crypto = "0.2.36"
hex = "0.4.0"